--- a/catalog/aquel-zero.html
+++ b/catalog/aquel-zero.html
@@ -19,6 +19,21 @@
 
     </script>
 
+    <script src="https://securepay.tinkoff.ru/html/payForm/js/tinkoff.js"></script>
+        <script type="text/javascript">
+            function makePayment(amount, orderId, description, name, email, phone) {
+                var params = {
+                    TerminalKey: "1481788451003DEMO",
+                    Amount: amount,
+                    OrderId: orderId,
+                    Description: description,
+                    DATA: "Email=" + email + "|Phone=" + phone + "|Name=" + name,
+                    Frame: true
+                };
+                doPay(params);
+            }
+        </script>
+
     <meta name="description" content="Фильтр Aquel Zero это самая компактная модель в линейке продукции Aquel, способная при этом максимально очищать воду, работать без необходимости подключения к водопроводу. Может быть установлена в любом удобном месте. За 10 минут очищает 4 литра воды. Бесплатно доставляется во все города России.">
 
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
@@ -77,7 +92,35 @@
               <img class="single-product__img" src="../img/aquel-zero.png" alt="">
             </div>
             <div class="single-product__button-wrapper">
-              <a href="" class="btn btn-default btn--buy">ОФОРМИТЬ</a>
+              <a href="#collapsePayment" class="btn btn-default btn--buy" role="button" data-toggle="collapse" aria-expanded="false" aria-controls="collapsePayment">ОФОРМИТЬ</a>
+              <div class="collapse" id="collapsePayment">
+                <div class="well">
+
+                  <form name="TinkoffPayForm">
+                    <input class="tinkoffPayRow tinkoffPayRow--sum" type="text" placeholder="Сумма заказа" name="paySum" value="44980" readonly>
+                    <input class="tinkoffPayRow" type="hidden" placeholder="Номер заказа" name="payOrder">
+                    <label class="tinkoffPayRow tinkoffPayRow--city">Ваш город:</label>
+                    <input class="tinkoffPayRow tinkoffPayRow--desc" type="text" placeholder="Город" name="payDesc">
+                    <input class="tinkoffPayRow" type="hidden" placeholder="ФИО плательщика" name="payName" required>
+                    <label class="tinkoffPayRow tinkoffPayRow--city">E-mail:</label>
+                    <input class="tinkoffPayRow tinkoffPayRow--tel" type="text" placeholder="E-mail" name="payEmail" required>
+                    <label class="tinkoffPayRow tinkoffPayRow--city">Телефон:</label>
+                    <input class="tinkoffPayRow tinkoffPayRow--tel" type="text" placeholder="Контактный телефон 7 -"
+                    name="payPhone" required>
+                    <label class="tinkoffPayRow tinkoffPayRow--tel-label">*Обязательно укажите телефон, по нему с Вами будет согласована доставка и монтаж.</label>
+                    <input class="tinkoffPayRow tinkoffPayRow--button-pay" type="button"
+                    onclick="makePayment(
+                      document.TinkoffPayForm.paySum.value.replace(/,/ig,'.') * 100,
+                      document.TinkoffPayForm.payOrder.value,
+                      document.TinkoffPayForm.payDesc.value,
+                      document.TinkoffPayForm.payName.value,
+                      document.TinkoffPayForm.payEmail.value,
+                      document.TinkoffPayForm.payPhone.value)"
+                      value="ОПЛАТИТЬ">
+                  </form>
+
+                </div>
+              </div>
             </div>
 
           </div>
