--- a/payment-successful.html
+++ b/payment-successful.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta name="yandex-verification" content="f112aed72d7844c4"/>
+    <meta name="google-site-verification" content="GYStpcz3yovC1FNjqsLMW4Fedw20rILZ2FwHs_2kFKA"/>
+
     <!-- Yandex.Metrika counter --> <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter42456764 = new Ya.Metrika({ id:42456764, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/42456764" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 
     <script>
@@ -19,10 +22,12 @@
 
     </script>
 
-    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
-    <link type="text/css" rel="stylesheet" href="../css/bootstrap.css"  media="screen,projection">
-    <link type="text/css" rel="stylesheet" href="../css/style.css">
-    <title>Сетчатые и картриджные фильтры</title>
+    <meta name="description" content="Уведомление покупателя об успешной оплате за продукцию Aquel">
+
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
+    <link type="text/css" rel="stylesheet" href="css/style.css">
+    <title>Оплата прошла успешно!</title>
   </head>
 
   <body>
@@ -41,15 +46,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand animation-pulse" href="../index.html">Deep-Aqua</a>
+              <a class="navbar-brand animation-pulse" href="index.html">Deep-Aqua</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="../catalog.html">Каталог</a></li>
-                <li><a href="../aquel-tehnology.html">Технологии</a></li>
-                <li><a href="../about.html">О Нас</a></li>
-                <li><a class="active-nav" href="../blog.html">Блог</a></li>
+                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="aquel-tehnology.html">Технологии</a></li>
+                <li><a href="about.html">О Нас</a></li>
+                <li><a href="blog.html">Блог</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
 
@@ -59,65 +64,22 @@
 
       <section class="main">
 
-        <div class="introduction introduction--blog-single">
-          <h1 class="introduction__title animation-fadeIn">Сетчатые и картриджные фильтры</h1>
-          <p class="introduction__content introduction__content--blog-single animation-fadeIn">Лучше что-то, чем ничего</p>
-          <p class="introduction__reading-time animation-fadeIn">Время чтения: 4 минут.</p>
-          <span class="introduction__aquel-title animation-fadeIn">
-
-          </span>
-          <div class="blog-teaser__social-wrapper">
-            <div class="ya-share2 blog-teaser__social animation-fadeIn" data-services="vkontakte,facebook,odnoklassniki,twitter"></div>
-          </div>
-        </div>
-
-        <div class="blog-single">
-          <div class="container-article">
-
-              <article class="blog-single__card">
-
-                <div class="blog-single__content-wrapper">
-
-                  <h2 class="blog-single__title">Сетчатые и картриджные фильтры</h2>
-                  <div class="divider-main divider-main--blog-single"></div>
-
-                  <p class="blog-single__content">Для защиты водопроводных труб от механического износа и засорения рекомендуется использовать фильтры механической очистки. Они бывают сетчатые и картриджные. В этой статье мы подробно расскажем о таких водоочистительных приборах.</p>
-
-                  <p class="blog-single__content"><strong>Сетчатые фильтры</strong> для воды  получили  своё  название за счёт основного фильтрующего элемента — металлической сетки. Она  отсеивает  крупные частицы песка, глины и другие вредные вещества. Сетчатые приборы  состоят из входного и выходного патрубка и специального отстойника. В последнем составляющем, происходит процесс фильтрации воды. Отстойник может располагаться в двух вариантах: либо перпендикулярно к магистрали, либо в виде косого элемента.</p>
-
-                  <p class="blog-single__content"><strong>Достоинства</strong> сетчатых фильтрующих приспособлений — лёгкость обслуживания. Из-за этого они не требуют специального оборудования и навыков. Экономичны и экологичны. Рекомендуется устанавливать в доме при  старых проржавевших сетях, в которых скапливается ржавчина.</p>
-
-                  <blockquote class="block-shadows"><p class="blog-single__content">Хорошо подходит как способ предварительной очистки воды перед устройствами с глубокой степенью очистки.</p></blockquote>
-
-                  <p class="blog-single__content"><strong>Недостатки</strong> — фильтры такого вида способны задерживать крупные  частицы,  хотя сегодня на прилавках магазинов встречаются сетчатые фильтры с более тонкой механической очисткой. Очищают водопроводную воду только от механических примесей, оставляя химические и биологические загрязнения.</p>
-
-                  <p class="blog-single__content"><strong>Картриджные фильтры</strong> для грубой очистки воды  обеспечивают  эффективную фильтрацию. Внешний вид  устройства похож на сосуд с двойной стенкой. Снаружи располагается полупрозрачный корпус, внутри  фильтрующий элемент, на котором происходит очистительный процесс воды. Уровень и вид фильтрации напрямую зависит от используемого элемента. Например, картриджные фильтры  механической очистки обладают способностью задержать частицы размером 0,5-150 микрон. Фильтрующий элемент, предназначенный для устранения железа, извлекает и осаждает внутри себя растворённое в жидкости железо. Пользоваться данными фильтрами можно и в доме, и в квартире  и даже в офисе.</p>
-
-                  <blockquote class="block-shadows"><p class="blog-single__content">Подходят для горячей и холодной воды.</p></blockquote>
-
-                  <div class="blog-single__image-wrapper">
-                    <div class="blog-single__image"><img src="post-image/21.01.17/setchatui-filtr-1.png" width="400" height="400" alt=""></div>
-                    <div class="blog-single__image"><img src="post-image/21.01.17/setchatui-filtr-2.png" width="400" height="400" alt=""></div>
-                  </div>
-
-                  <p class="blog-single__content"><strong>Достоинства</strong> — небольшая стоимость, высокий уровень фильтрации.</p>
-
-                  <p class="blog-single__content"><strong>Недостатки</strong> — необходимо проводить регулярную замену составляющих элементов, сложный демонтаж колбы.</p>
-
-                  <p class="blog-single__content">Фильтры грубой очистки воды практичны и сильно уступают по стоимости другим водоочистительным приборам. Благодаря их функциональности, их можно смело  встраивать  в любом помещении. В следующий раз  мы познакомим вас с остальными видами фильтров для  очистки воды в квартире.</p>
-
-                </div>
-
-              </article>
-
+        <div class="welcome-to-shop">
+          <h1 class="welcome-to-shop__title animation-fadeIn">Поздравляем с покупкой!</h1>
+          <p class="welcome-to-shop__subtitle animation-fadeIn">Оплата прошла успешно.</p>
+          <p class="welcome-to-shop__subtitle welcome-to-shop__subtitle--success animation-fadeIn">В ближайшее время с Вами свяжется менеджер для уточнения <b>адреса и времени</b> доставки.</p>
+          <p class="welcome-to-shop__subtitle welcome-to-shop__subtitle--success animation-fadeIn">Если Вы указали <b>неправильный</b> номер телефона (или e-mail) для связи, убедительная просьба связаться с нами по телефону: <a href="tel:+7 904 045 93 93">+7 904 045 93 93</a> или написать нам в <a href="#showchat">онлайн</a> чат.</p>
+          <p class="welcome-to-shop__subtitle welcome-to-shop__subtitle--success animation-fadeIn">Спасибо за покупку!</p>
+          <div class="button-wrapper">
+            <a class="btn btn-default btn--welcome-to-shop animation-fadeIn" href="#" role="button">О БРЕНДЕ AQUEL</a>
           </div>
         </div>
 
         <div class="infobar">
           <ul class="infobar__list">
-            <li class="infobar__list-item"><a href="../payment-and-shipping.html">Оплата и доставка</a></li>
-            <li class="infobar__list-item"><a href="../catalog.html">Каталог</a></li>
-            <li class="infobar__list-item"><a href="../warranty-and-service.html">Гарантия и обслуживание</a></li>
+            <li class="infobar__list-item"><a href="payment-and-shipping.html">Оплата и доставка</a></li>
+            <li class="infobar__list-item"><a href="catalog.html">Каталог</a></li>
+            <li class="infobar__list-item"><a href="warranty-and-service.html">Гарантия и обслуживание</a></li>
           </ul>
         </div>
 
@@ -162,21 +124,21 @@
           <div class="footer__links">
             <h4 class="footer__links-title">Важная информация</h4>
             <ul>
-              <li><a href="../brand-aquel.html">Бренд Aquel</a></li>
-              <li><a href="../contract-offer.html">Договор оферта</a></li>
-              <li><a href="../certificate-of-quality.html">Сертификаты качества</a></li>
-              <li><a href="../privacy-policy.html">Политика конфиденциальности</a></li>
-              <li><a href="../acquired.html">Информация для пользователей фильтров</a></li>
+              <li><a href="brand-aquel.html">Бренд Aquel</a></li>
+              <li><a href="contract-offer.html">Договор оферта</a></li>
+              <li><a href="certificate-of-quality.html">Сертификаты качества</a></li>
+              <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
+              <li><a href="acquired.html">Информация для пользователей фильтров</a></li>
             </ul>
           </div>
 
           <div class="footer__payment">
             <h4 class="footer__payment-title">Партнеры</h4>
             <p class="footer__payment-icon">
-              <img src="../img/visa-mastercard-logo-small.png" width="200" height="70" alt="Visa и MasterCard логотип">
+              <img src="img/visa-mastercard-logo-small.png" width="200" height="70" alt="Visa и MasterCard логотип">
             </p>
             <div class="footer__payment-partner">
-              <img src="../img/TinkoffBank_general_logo_2.png" alt="Тинькофф Банк логотип" width="200" height="200">
+              <img src="img/TinkoffBank_general_logo_2.png" alt="Тинькофф Банк логотип" width="200" height="200">
             </div>
           </div>
 
@@ -194,10 +156,9 @@
   <script type="text/javascript" src="https://cdn.envybox.io/widget/cbk.js?wcb_code=b83ff3938035134ebbd992ceba523e68" charset="UTF-8" async></script>
   <!-- /.CallBackKillerWidget -->
 
-  <script src="//yastatic.net/share2/share.js" async="async"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" async="async"></script>
-  <script type="text/javascript" src="../js/bootstrap.js" async="async"></script>
-  <script type="text/javascript" src="../js/main.js" async="async"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
 
   </body>
 </html>
