--- a/brand-aquel.html
+++ b/brand-aquel.html
@@ -19,12 +19,12 @@
 
     </script>
 
-    <meta name="description" content="Бесплатная доставка до покупателя. Мы осуществляем доставку, монтаж и обслуживание нашей продукции в 31 городе России, а некоторые модели доставляем во все города России.">
+    <meta name="description" content="История возникновения и развития бренда и компании Aquel, начиная с 2000 года и по сей день.">
 
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.css"  media="screen,projection">
     <link type="text/css" rel="stylesheet" href="css/style.css">
-    <title>Оплата и доставка</title>
+    <title>Бренд Aquel - основание, развитие и достижения.</title>
   </head>
 
   <body>
@@ -51,7 +51,7 @@
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="aquel-tehnology.html">Технологии</a></li>
-                <li><a href="about.html">О Нас</a></li>
+                <li class="active-nav"><a href="about.html">О Нас</a></li>
                 <li><a href="blog.html">Блог</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
@@ -62,80 +62,62 @@
 
       <section class="main">
 
-        <div class="introduction introduction--payment-and-shipping">
-          <h1 class="introduction__title animation-fadeIn">Оплата и доставка</h1>
-          <p class="introduction__content introduction__content--payment-and-shipping animation-fadeIn">Защищенные платежи</p>
-          <p class="introduction__content introduction__content--payment-and-shipping animation-fadeIn">Бесплатная доставка</p>
-          <span class="introduction__aquel-title animation-fadeIn">
-            <svg version="1.1" x="0px" y="0px"
-            width="130" height="130" viewBox="0 0 612 612" xml:space="preserve">
-              <g>
-                <path d="M391.897,259.865c-0.737-6.115-3.061-11.692-6.633-16.349l24.524-152.198c0.913-5.663-2.72-11.062-8.308-12.353
-                l-0.274-0.062c-5.588-1.291-11.219,1.971-12.882,7.46l-44.676,147.543c-11.01,5.536-18.653,16.821-18.653,29.964
-                c0,18.558,15.091,33.658,33.648,33.658c3.458,0,6.728-0.675,9.869-1.647l93.334,48.503c5.135,2.668,11.456,1.002,14.607-3.852
-                l0.141-0.217c3.152-4.852,2.104-11.305-2.424-14.91L391.897,259.865z M342.023,263.87c0-9.163,7.458-16.621,16.621-16.621
-                c9.171,0,16.629,7.458,16.629,16.621c0,9.17-7.458,16.629-16.629,16.629C349.481,280.499,342.023,273.041,342.023,263.87z
-                M612,263.87c0,112.658-73.93,208.333-175.809,241.169l-0.005-36.076c82.756-31.396,141.757-111.467,141.757-205.093
-                c0-120.92-98.38-219.299-219.299-219.299c-120.92,0-219.299,98.379-219.299,219.299c0,12.13,1.034,24.019,2.938,35.62h-34.441
-                c-1.646-11.646-2.554-23.527-2.554-35.62c0-139.703,113.653-253.356,253.356-253.356C498.347,10.514,612,124.167,612,263.87z
-                M402.81,444.398l-77.99-77.139c-4.938-4.939-11.664-7.664-18.561-7.664h-39.336v-14.729c0-10.984-8.939-19.838-19.923-19.838
-                H19.841c-10.983,0-19.838,8.854-19.838,19.838v132.82h410.641v-14.473C410.643,456.148,407.833,449.336,402.81,444.398z
-                M368.838,446.953h-75.521c-1.703,0-3.065-1.363-3.065-3.066v-58.322c0-1.703,1.361-3.066,3.065-3.066h14.389
-                c0.767,0,1.618,0.342,2.214,0.852l61.047,58.324C373.01,443.545,371.647,446.953,368.838,446.953z M410.652,488.66v43.941
-                c0,10.961-8.886,19.848-19.848,19.848h-21.237c-3.837-26.332-26.53-46.576-53.919-46.576c-27.325,0-50.017,20.244-53.854,46.576
-                H154.151c-3.837-26.332-26.53-46.576-53.854-46.576c-27.324,0-50.017,20.244-53.854,46.576H19.848
-                C8.886,552.447,0,543.562,0,532.602V488.66H410.652z M315.709,519.152c-22.732,0-41.208,18.391-41.208,41.123
-                c0,22.734,18.476,41.211,41.208,41.211c22.733,0,41.124-18.477,41.124-41.211C356.833,537.543,338.442,519.152,315.709,519.152z
-                M315.709,580.881c-11.408,0-20.604-9.195-20.604-20.605c0-11.324,9.195-20.604,20.604-20.604c11.324,0,20.52,9.279,20.52,20.604
-                C336.229,571.686,327.033,580.881,315.709,580.881z M100.3,519.152c-22.732,0-41.209,18.391-41.209,41.123
-                c0,22.734,18.477,41.211,41.209,41.211c22.733,0,41.124-18.477,41.124-41.211C141.424,537.543,123.033,519.152,100.3,519.152z
-                M100.3,580.881c-11.409,0-20.604-9.195-20.604-20.605c0-11.324,9.195-20.604,20.604-20.604c11.324,0,20.604,9.279,20.604,20.604
-                C120.904,571.686,111.624,580.881,100.3,580.881z"/>
-              </g>
-            </svg>
-          </span>
+        <div class="introduction introduction--brand-aquel">
+          <h1 class="introduction__title animation-fadeIn">Бренд</h1>
+          <span class="introduction__aquel-title animation-fadeIn">AQUEL</span>
         </div>
 
-        <div class="payment-and-shipping">
+        <div class="brand-aquel">
           <div class="container-article">
 
-            <div class="payment-and-shipping-card">
-              <p class="payment-and-shipping__title">Оплата банковской картой онлайн</p>
-              <div class="divider-main divider-main--card"></div>
-              <p class="payment-and-shipping__content">Наша Компания является партнером АО «Тинькофф Банк» в части приема платежей. В нашем Интернет-магазине вы можете оплатить Товар банковской картой Visa или Mastercard. После выбора способа оплаты «Банковской картой онлайн» Вам откроется защищенное окно с платежной страницей АО «Тинькофф Банк», где необходимо ввести данные Вашей банковской карты. Для дополнительной аутентификации держателя карты используется протокол 3D Secure. Если Банк, выпустивший карту, поддерживает данную технологию, Вы будете перенаправлены на сервер Банка-эмитента для дополнительной идентификации. Информацию о правилах и методах дополнительной идентификации уточняйте в Банке, выдавшем банковскую карту.</p>
-              <div class="divider-main divider-main--card"></div>
-              <p class="payment-and-shipping__content">Предоставляемая Вами персональная информация (имя, адрес, телефон, E-mail, номер кредитной карты) является конфиденциальной и не подлежит разглашению. Данные Вашей банковской карты передаются только в зашифрованном виде и не сохраняются на нашем Web-сервере. Безопасность обработки Интернет-платежей гарантирует АО «Тинькофф Банк». Все операции с платежными картами происходят в соответствии с требованиями Visa International и MasterCard WorldWide. При передаче информации используется специальные технологии безопасности карточных онлайн-платежей, обработка данных ведется на безопасном высокотехнологичном сервере процессинга АО «Тинькофф Банк».</p>
-              <div class="divider-main divider-main--card"></div>
-              <p class="payment-and-shipping__content">АО «Тинькофф Банк» защищает и обрабатывает данные Вашей банковской карты по стандарту безопасности PCI DSS. Передача информации в платежный шлюз происходит с применением технологии шифрования SSL. Дальнейшая передача информации происходит по закрытым банковским сетям, имеющим наивысший уровень надежности. АО «Тинькофф Банк» не передает данные Вашей карты нам и иным третьим лицам. Для дополнительной аутентификации держателя карты используется протокол 3D Secure».</p>
-              <div class="divider-main divider-main--card"></div>
-              <p class="payment-and-shipping__content">В случае возникновения вопросов по совершенному платежу, Вы можете обратиться в службу поддержки клиентов по телефону: <a href="tel:+79040459393">+7&nbsp904&nbsp045&nbsp93&nbsp93</a></p>
+            <div class="brand-aquel__card brand-aquel__card--person">
+              <img src="img/Petr-Benesh-founder.jpg" width="768" height="768" alt="Основатель и руководитель Aquel">
             </div>
 
-            <div class="payment-and-shipping-card">
-              <p class="payment-and-shipping__title">Процесс оплаты по шагам:</p>
+            <div class="brand-aquel__card brand-aquel__card--intro">
+              <h2 class="brand-aquel__title">Петр Бенеш</h2>
+              <p class="brand-aquel__sub-title">Основатель и руководитель "AQUEL Bohemia"</p>
               <div class="divider-main divider-main--card"></div>
-              <p class="payment-and-shipping__content">Для оплаты банковской картой необходимо заполнить короткую платежную форму:</p>
-              <ul class="payment-and-shipping__details">
-                <li> Выбрать тип платёжной системы (Visa, MasterCard)</li>
-                <li>Указать номер карты (16 цифр на лицевой стороне карты)</li>
-                <li>Ввести CVC / CVV номер (3 цифры, которые напечатаны на обратной стороне карты, на полосе с подписью)</li>
-                <li>Имя и фамилию владельца карты (в точности так же, как они написаны на лицевой стороне карты)</li>
-                <li>Срок действия карты, который написан на лицевой стороне карты.</li>
+              <p class="brand-aquel__content">Иметь ясную цель - это всегда залог успеха. Это миссия каждого лидера, чтобы за ним шли остальные с абсолютной верой в исполнение поставленных задач и в получение запланированных результатов. Без целей, четкой дороги, Вы топчитесь на месте в ожидании чуда и в итоге все разваливается, как карточный домик.</p>
+              <p class="brand-aquel__content">Очевидно, что рынок требует обновления, повышения профессионализма, имиджа, безопасности и качества продукта, профессионального консультирования и правильного подхода к клиенту. Люди хотят честный и деловой подход.</p>
+            </div>
+
+            <h2 class="brand-aquel__title brand-aquel__title--full">Позвольте рассказать Вам, какой путь мы прошли за 17 лет!</h2>
+
+            <div class="brand-aquel__card brand-aquel__card--list">
+              <ul class="brand-aquel__list">
+                <li class="brand-aquel__year">2000 год</li>
+                <div class="divider-main divider-main--card divider-main--about"></div>
+                <li>Основание Aquel</li>
+                <li>Первая презентация оборудования</li>
+                <div class="divider-main divider-main--card divider-main--about"></div>
+                <li>Консультация:</li>
+                <li>9:00 - 19:00</li>
+                <li>Время московское</li>
+                <div class="divider-main divider-main--card divider-main--about"></div>
+                <li>Монтаж и обслуживание:</li>
+                <li>По согласованию</li>
               </ul>
             </div>
 
-            <div class="payment-and-shipping-card">
-              <p class="payment-and-shipping__title">Доставка до покупателя</p>
-              <div class="divider-main divider-main--card"></div>
-              <p class="payment-and-shipping__content">Доставка Товара до покупателя осуществляется бесплатно. Обращаем Ваше внимание на то, что модели Товаров, не требующие монтажа техническими специалистами сервисной службы "Аквел Ру", (Aquel Zero), могут быть доставлены в любой город Российской Федерации и стран СНГ, а модели требующие монтажа (Aquel 1000 и Aquel 200), могут быть доставлены в следующие города и регионы:</p>
-              <div class="divider-main divider-main--card"></div>
-              <p class="payment-and-shipping__content">Великий Новгород, Владимир, Екатеринбург, Иваново, Ижевск, Йошкар-Ола, Казань, Калининград, Калуга, Киров, Кострома, Махачкала, Москва, Нижний.Новгород, Набережные Челны, Омск, Пермь, Рыбинск, Самара, Саратов, Санкт-Петербург, Сургут, Сыктывкар, Тверь, Тольятти, Томск, Тула, Уфа, Ухта (Республика Коми), Чайковский, Чебоксары. А так же, Краснодарский край и Ставропольский край.</p>
-              <div class="divider-main divider-main--card"></div>
-              <p class="payment-and-shipping__content">Средний срок доставки Товара до покупателя 7 дней, максимальный срок не более 30 дней с момента оплаты Товара покупателем.</p>
+            <div class="brand-aquel__card brand-aquel__card--list">
+              <ul class="brand-aquel__list">
+                <li class="brand-aquel__year">2000 год</li>
+                <div class="divider-main divider-main--card divider-main--about"></div>
+                <li>Интернет-магазин:</li>
+                <li>Круглосуточно</li>
+                <div class="divider-main divider-main--card divider-main--about"></div>
+                <li>Консультация:</li>
+                <li>9:00 - 19:00</li>
+                <li>Время московское</li>
+                <div class="divider-main divider-main--card divider-main--about"></div>
+                <li>Монтаж и обслуживание:</li>
+                <li>По согласованию</li>
+              </ul>
             </div>
 
           </div>
-        </div>
+        </div><!-- /.brand-aquel -->
 
         <div class="infobar">
           <ul class="infobar__list">
