--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="yandex-verification" content="f112aed72d7844c4"/>
-    <meta name="google-site-verification" content="GYStpcz3yovC1FNjqsLMW4Fedw20rILZ2FwHs_2kFKA"/>
+    <meta name="yandex-verification" content="bc42ee93553b4e0c" />
+    <meta name="google-site-verification" content="tx2Hk9HW0-WQgBvTM5-1X15sdsmEJjr94Yowl_L8RfA" />
 
     <!-- Yandex.Metrika counter --> <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter42456764 = new Ya.Metrika({ id:42456764, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/42456764" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 
@@ -375,6 +375,7 @@
           <div class="footer__links">
             <h4 class="footer__links-title">Важная информация</h4>
             <ul>
+              <li><a href="brand-aquel.html">Бренд Aquel</a></li>
               <li><a href="contract-offer.html">Договор оферта</a></li>
               <li><a href="certificate-of-quality.html">Сертификаты качества</a></li>
               <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
